test/corpus/operations.txt
================================================================================
Operation with no input and no output
================================================================================

op ping()

--------------------------------------------------------------------------------

(source_file
  (operation_declaration
    (identifier)))

================================================================================
Operation with input and output
================================================================================

op create_charge(charge): charge

--------------------------------------------------------------------------------

(source_file
  (operation_declaration
    (identifier)
    (named_type
      (type_identifier))
    (named_type
      (type_identifier))))

================================================================================
Operation with trailing traits
================================================================================

op create_charge(charge): charge
  @http(method: "POST", path: "/charges")
  @errors(card_declined, not_found)
  @async

--------------------------------------------------------------------------------

(source_file
  (operation_declaration
    (identifier)
    (named_type
      (type_identifier))
    (named_type
      (type_identifier))
    (trait
      (trait_name)
      (trait_arguments
        (trait_argument
          (key_value
            (identifier)
            (string)))
        (trait_argument
          (key_value
            (identifier)
            (string)))))
    (trait
      (trait_name)
      (trait_arguments
        (trait_argument
          (identifier))
        (trait_argument
          (identifier))))
    (trait
      (trait_name))))

================================================================================
Operation with nullable output
================================================================================

op find(uuid): charge?

--------------------------------------------------------------------------------

(source_file
  (operation_declaration
    (identifier)
    (primitive_type)
    (named_type
      (type_identifier))
    (nullable)))

================================================================================
Named operation parameter
================================================================================

pub struct client {
  op fetch_note(ref: note_ref): note
    @http(method: "GET", path: "/notes/{.ref.id}")
}

op lookup(id: string): note

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (visibility)
    (identifier)
    (struct_body
      (operation_declaration
        (identifier)
        (identifier)
        (named_type
          (type_identifier))
        (named_type
          (type_identifier))
        (trait
          (trait_name)
          (trait_arguments
            (trait_argument
              (key_value
                (identifier)
                (string)))
            (trait_argument
              (key_value
                (identifier)
                (string
                  (field_placeholder)))))))))
  (operation_declaration
    (identifier)
    (identifier)
    (primitive_type)
    (named_type
      (type_identifier))))
